@@ -110,45 +110,52 @@
     def __exit__(self, type, value, traceback):
         self.Release()
 
-    from contextlib import contextmanager
-    @contextmanager
-    @needs_numpy
-    def GetArrayZeroCopy(self, raw = False):
-        '''
-        Get a numpy array for the image buffer as zero copy reference to the underlying buffer.
-        Note: The context manager variable MUST be released before leaving the scope.
-        '''
+    from sys import version_info as _gazc_python_version_info
+    # need at least Python 3.3 for memory view
+    if _gazc_python_version_info >= (3, 3, 0):
+        from contextlib import contextmanager
+        @contextmanager
+        @needs_numpy
+        def GetArrayZeroCopy(self, raw = False):
+            '''
+            Get a numpy array for the image buffer as zero copy reference to the underlying buffer.
+            Note: The context manager variable MUST be released before leaving the scope.
+            '''
 
-        # For packed formats, we cannot zero-copy, so use GetArray
-        pt = self.GetPixelType()
-        if IsPacked(pt):
-            yield self.GetArray()
-            return
+            # For packed formats, we cannot zero-copy, so use GetArray
+            pt = self.GetPixelType()
+            if IsPacked(pt):
+                yield self.GetArray()
+                return
 
-        # Here is the procedure:
-        #  1. prepare and get image format info
-        #  2. get a memory view for our image buffer and
-        #     cast it to the right shape and data format
-        #  3. build an array upon the view (zero copy!)
-        #  4. as context manager, we yield this array
-        #  5. delete the array and release our memory
-        #  6. check the number of exports of the encapsuled buffer
-        #     => if this is > 0 => somebody else still has a reference!
+            # Here is the procedure:
+            #  1. prepare and get image format info
+            #  2. get a memory view for our image buffer and
+            #     cast it to the right shape and data format
+            #  3. build an array upon the view (zero copy!)
+            #  4. as context manager, we yield this array
+            #  5. delete the array and release our memory
+            #  6. check the number of exports of the encapsuled buffer
+            #     => if this is > 0 => somebody else still has a reference!
 
-        mv = self.GetMemoryView()
-        if not raw:
-            shape, dtype, format = self.GetImageFormat()
-            mv = mv.cast(format, shape)
+            mv = self.GetMemoryView()
+            if not raw:
+                shape, dtype, format = self.GetImageFormat()
+                mv = mv.cast(format, shape)
 
-        ar = _pylon_numpy.asarray(mv)
+            ar = _pylon_numpy.asarray(mv)
 
-        yield ar
+            yield ar
 
-        del ar
-        mv.release() # Only release() so we can check the references
+            del ar
+            mv.release() # Only release() so we can check the references
 
-        if self.GetNumBufferExports(mv) > 0:
-            raise RuntimeError("Please remove any references to the array before leaving context manager scope!!!")
+            # There will be one outstanding reference for the 'with target'.
+            # That is OK since that will be released right after this function
+            # returns.
+            if self.GetNumBufferExports(mv) > 1:
+                raise RuntimeError("Please remove any references to the array before leaving context manager scope!!!")
+    del _gazc_python_version_info
 %}
 }
 
