@@ -1,3 +1,11 @@
+Version ?.?.?
+    - Date ???
+    - Fixed a bug in GrabResult.GetArrayZeroCopy (accessing a non-existent
+      attribute). Added a zero-copy sample.
+    - fix image format converter
+    - enable enum_props in Pylon
+    - fix SWIG include path in --pp-debug case
+
 Version 1.1.0
     - Date 2018-01-15
     - Fixed a memory leak in exception handling code.
